--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -74,9 +74,12 @@ hr {
 
 /* Contact Form */
 form.wj-contact {
-  width: 70%;
   display: flex;
   flex-direction: column;
+}
+
+form.wj-contact input[type="text"] {
+  width: 200px;
 }
 
 form.wj-contact input[type="text"], form.wj-contact textarea[type="text"] {
@@ -106,6 +109,20 @@ form.wj-contact input[type="submit"] {
   border: 1px solid transparent;
   height: auto;
   align-self: flex-end;
+}
+
+.socials {
+  display: flex;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+
+.socials > h1 {
+  margin: 0;
+}
+
+.socials img {
+  max-width: 2rem;
 }
 
 /* Divs */
